strip: prevent nested strips from inheriting --spacing (#222)

--- a/src/browser/scss/widgets/_panel.scss
+++ b/src/browser/scss/widgets/_panel.scss
@@ -126,6 +126,10 @@
         height: 100rem;
     }
 
+    > .panel {
+        --spacing: 0;
+    }
+
     &.vertical {
         > .panel {
 
